--- a/theOdinProject/foundations/css-exercises-main/foundations/flex/03-flex-header-2/style.css
+++ b/theOdinProject/foundations/css-exercises-main/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,25 @@ a {
 ul {
   list-style-type: none;
 }
+.container{
+  display: flex;
+  align-items: center;
+}
+header{
+  display: flex;
+justify-content: space-between;
+}
+
+.containerOne{
+  display: flex;
+  margin-right: auto;
+}
+
+ul{
+  display: flex;
+  gap: 15px;
+}
+.containerTwo{
+  display: flex;
+  gap: 12px;
+}
