--- a/theOdinProject/foundations/css-exercises-main/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/theOdinProject/foundations/css-exercises-main/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,22 +7,37 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding-top: 15px;
+  padding: 10px;
+  /* font-size: 10px; */
+  /* padding-top: 5px; */
+
 }
 
 .title {
   background: #e3f4ff;
+  font-size:20px;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  /* padding: 10px 170px; */
+  text-align: center;
+  padding: 8px;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  /* text-align: center; */
+  margin: 0 auto;
 }
