--- a/theOdinProject/foundations/css-exercises-main/foundations/flex/04-flex-information/style.css
+++ b/theOdinProject/foundations/css-exercises-main/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,16 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+body{
+  text-align: center;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+.child{
+  flex-basis: 200px;
+}
