--- a/theOdinProject/foundations/css-exercises-main/foundations/flex/05-flex-modal/style.css
+++ b/theOdinProject/foundations/css-exercises-main/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,19 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal{
+  display: flex;
+  padding: 10px;  
+  gap:10px
+}
+
+.icon{
+  flex-shrink: 0;
+}
+
+.containerOne{
+  display: flex;
+  justify-content: space-between;
+}
+
