--- a/theOdinProject/foundations/css-exercises-main/foundations/flex/06-flex-layout/style.css
+++ b/theOdinProject/foundations/css-exercises-main/foundations/flex/06-flex-layout/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+}
+
 
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  /* padding: 5px; */
 }
 
 img {
@@ -23,4 +29,39 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+ul{
+  display: flex;
+  gap: 20px;
+}
+
+ul li{
+  list-style: none;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
