--- a/theOdinProject/foundations/css-exercises-main/foundations/flex/07-flex-layout-2/style.css
+++ b/theOdinProject/foundations/css-exercises-main/foundations/flex/07-flex-layout-2/style.css
@@ -1,3 +1,9 @@
+
+*{
+  padding:0;
+  margin: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -26,4 +32,65 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+
+}
+
+.cardContainer{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+}
+
+.card{
+  flex-basis: 300px;
+}
+
+.header{
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.sidebarContainer{
+  display: flex;
+  height: 85vh;
+}
+
+.sidebar{
+  display: flex;
+  flex-basis: 200px;
+  flex-shrink: 0;
+  padding: 10px;
+  /* justify-content: flex-start; */
+}
+
+.sidebar ul{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+ul li{
+  list-style: none;
+}
+
+ul li a{
+  text-decoration: none;
+  color: white;
+}
+
+.footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
